adding password update and initialization vector update

--- a/PasswordManager/PasswordManager.csproj
+++ b/PasswordManager/PasswordManager.csproj
@@ -78,6 +78,18 @@
     <Compile Include="AddNewEntry.Designer.cs">
       <DependentUpon>AddNewEntry.cs</DependentUpon>
     </Compile>
+    <Compile Include="InitializationVectorUpdate.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="InitializationVectorUpdate.Designer.cs">
+      <DependentUpon>InitializationVectorUpdate.cs</DependentUpon>
+    </Compile>
+    <Compile Include="PasswordUpdate.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="PasswordUpdate.Designer.cs">
+      <DependentUpon>PasswordUpdate.cs</DependentUpon>
+    </Compile>
     <Compile Include="PasswordAndInititalizationVectorRead.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -114,11 +126,17 @@
     <EmbeddedResource Include="AddNewEntry.resx">
       <DependentUpon>AddNewEntry.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="InitializationVectorUpdate.resx">
+      <DependentUpon>InitializationVectorUpdate.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="ModifyExistingEntry.resx">
       <DependentUpon>ModifyExistingEntry.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="PasswordAndInitializationVectorCreation.resx">
       <DependentUpon>PasswordAndInitializationVectorCreation.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="PasswordUpdate.resx">
+      <DependentUpon>PasswordUpdate.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="PasswordAndInititalizationVectorRead.resx">
       <DependentUpon>PasswordAndInititalizationVectorRead.cs</DependentUpon>
